# PowerTask

./: README.en.md  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_camera.xml  activity_gl_camera.xml  activity_main.xml  activity_player.xml  acvitity_image.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
cameralib/src/main/: AndroidManifest.xml
cameralib/src/main/res/layout/: acvitity_camera_demo.xml  fragment_camera_preview.xml  view_preview_bottom.xml  view_preview_top.xml
sdk/: build.gradle
sdk/src/main/: AndroidManifest.xml
sdk/src/main/cpp/: CMakeLists.txt
sdk/src/main/cpp/MediaPlayer/: CMakeLists.txt
sdk/src/main/cpp/MediaPlayer/android/: CainMediaPlayer.cpp  CainMediaPlayer.h  com_cgfay_media_CainMediaPlayer.cpp
sdk/src/main/cpp/MediaPlayer/source/device/android/: GLESDevice.cpp  GLESDevice.h
sdk/src/main/cpp/MediaPlayer/source/encoder/: AudioEncoder.cpp  AudioEncoder.h  MediaEncoder.cpp  MediaEncoder.h  VideoEncoder.cpp  VideoEncoder.h
sdk/src/main/cpp/MediaPlayer/source/muxer/: MediaMuxer.cpp  MediaMuxer.h
sdk/src/main/cpp/MediaPlayer/source/player/: MediaPlayer.cpp  MediaPlayer.h
sdk/src/main/cpp/fdkaac/: AACDecoderJNI.cpp  AACEncoderJNI.cpp  CMakeLists.txt  com_mlingdu_sdk_fdkaac_AACDecoder.h
sdk/src/main/cpp/fdkaac/decoder/: AACDecoder.cpp  AACDecoder.h
sdk/src/main/cpp/fdkaac/encoder/: AACEncoder.h
sdk/src/main/cpp/libH264Enocder/: CMakeLists.txt
sdk/src/main/cpp/libRTMP/: CMakeLists.txt
sdk/src/main/cpp/libRTMP/source/: aw_streamer.c  aw_streamer.h
sdk/src/main/cpp/libaw/: Android.mk  aw_jni.cpp
sdk/src/main/cpp/libaw/common/: aw_log.h  aw_rtmp.c  aw_thread_poll.h
sdk/src/main/cpp/libaw/pushStream/api/: AWAVCapture.cpp  AWAVCapture.h  AWAVConfig.cpp  AWAVConfig.h  AWEncoderManager.cpp  AWEncoderManager.h  AWSWFaacEncoder.cpp  AWSWFaacEncoder.h  AWSWX264Encoder.cpp  AWSWX264Encoder.h
sdk/src/main/cpp/libaw/pushStream/base/: AWAudioEncoder.cpp  AWAudioEncoder.h  AWEncoder.cpp  AWEncoder.h  AWVideoEncoder.cpp  AWVideoEncoder.h
sdk/src/main/cpp/libaw/pushStream/rtmp/: aw_streamer.h
(+141 files in other folders)
